--- a/Homework4.Repositories/Homework4.Repositories.csproj
+++ b/Homework4.Repositories/Homework4.Repositories.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
   </ItemGroup>
 
   <ItemGroup>
